--- a/newsite/css/main.css
+++ b/newsite/css/main.css
@@ -37,7 +37,7 @@ div#header {
     width: 100%;
     margin: 0;
     padding: 0;
-    background: #000 url("../images/chalkboard.png") no-repeat fixed center;
+    background: #000 url("../images/chalkboard.png") no-repeat center;
 }
 
 .container {
@@ -70,6 +70,7 @@ div#smnav {
 		-ms-transition: border-color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out;
 		color: inherit;
+        
 		outline: 0;
 		text-decoration: none;
 	}
@@ -117,12 +118,26 @@ div#about img {
     margin:0 0 10px 0;
 }
 
+div#smnav nav li a.text {
+    color:#000;
+	-moz-transition: all 0.5s ease-in-out;
+	-webkit-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    border-bottom: solid 1px #fff;
+}
+
+div#smnav nav li a.text:hover {
+    color:#666;
+    border-bottom: solid 1px #666;
+}
 
 @-moz-keyframes nav-icons { 0% { -moz-transform: translate3d(0,1em,0); -webkit-transform: translate3d(0,1em,0); -o-transform: translate3d(0,1em,0); -ms-transform: translate3d(0,1em,0); transform: translate3d(0,1em,0); opacity: 0; } 100% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; } }
 	@-webkit-keyframes nav-icons { 0% { -moz-transform: translate3d(0,1em,0); -webkit-transform: translate3d(0,1em,0); -o-transform: translate3d(0,1em,0); -ms-transform: translate3d(0,1em,0); transform: translate3d(0,1em,0); opacity: 0; } 100% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; } }
 	@-o-keyframes nav-icons { 0% { -moz-transform: translate3d(0,1em,0); -webkit-transform: translate3d(0,1em,0); -o-transform: translate3d(0,1em,0); -ms-transform: translate3d(0,1em,0); transform: translate3d(0,1em,0); opacity: 0; } 100% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; } }
 	@-ms-keyframes nav-icons { 0% { -moz-transform: translate3d(0,1em,0); -webkit-transform: translate3d(0,1em,0); -o-transform: translate3d(0,1em,0); -ms-transform: translate3d(0,1em,0); transform: translate3d(0,1em,0); opacity: 0; } 100% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; } }
-	@keyframes nav-icons { 0% { -moz-transform: translate3d(0,1em,0); -webkit-transform: translate3d(0,1em,0); -o-transform: translate3d(0,1em,0); -ms-transform: translate3d(0,1em,0); transform: translate3d(0,1em,0); opacity: 0; } 100% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; } }
+	@keyframes nav-icons { 0% { -moz-transform: translate3d(0,1em,0); -webkit-transform: translate3d(0,1em,0); -o-transform: translate3d(0,1em,0); -ms-transform: translate3d(0,1em,0); transform: translate3d(-1em,1em,0); opacity: 0; } 100% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; } }
 
 nav li {
 				-moz-animation: nav-icons 0.5s ease-in-out forwards;
@@ -146,10 +161,41 @@ nav li {
 				opacity: 0;
 				position: relative;
 				top: 0;
-				width: 5.35em;
 			}
 
 				nav li:nth-child(1) {
+					-moz-animation-delay: 1.5s;
+					-webkit-animation-delay: 1.5s;
+					-o-animation-delay: 1.5s;
+					-ms-animation-delay: 1.5s;
+					animation-delay: 1.5s;
+				}
+
+				nav li:nth-child(2) {
+					-moz-animation-delay: 1.75s;
+					-webkit-animation-delay: 1.75s;
+					-o-animation-delay: 1.75s;
+					-ms-animation-delay: 1.75s;
+					animation-delay: 1.75s;
+				}
+
+				nav li:nth-child(3) {
+					-moz-animation-delay: 2s;
+					-webkit-animation-delay: 2s;
+					-o-animation-delay: 2s;
+					-ms-animation-delay: 2s;
+					animation-delay: 2s;
+				}
+
+				nav li:nth-child(4) {
+					-moz-animation-delay: 2.25s;
+					-webkit-animation-delay: 2.25s;
+					-o-animation-delay: 2.25s;
+					-ms-animation-delay: 2.25s;
+					animation-delay: 2.25s;
+				}
+
+				nav li:nth-child(5) {
 					-moz-animation-delay: 2.5s;
 					-webkit-animation-delay: 2.5s;
 					-o-animation-delay: 2.5s;
@@ -157,7 +203,7 @@ nav li {
 					animation-delay: 2.5s;
 				}
 
-				nav li:nth-child(2) {
+				nav li:nth-child(6) {
 					-moz-animation-delay: 2.75s;
 					-webkit-animation-delay: 2.75s;
 					-o-animation-delay: 2.75s;
@@ -165,7 +211,7 @@ nav li {
 					animation-delay: 2.75s;
 				}
 
-				nav li:nth-child(3) {
+				nav li:nth-child(7) {
 					-moz-animation-delay: 3s;
 					-webkit-animation-delay: 3s;
 					-o-animation-delay: 3s;
@@ -173,7 +219,7 @@ nav li {
 					animation-delay: 3s;
 				}
 
-				nav li:nth-child(4) {
+				nav li:nth-child(8) {
 					-moz-animation-delay: 3.25s;
 					-webkit-animation-delay: 3.25s;
 					-o-animation-delay: 3.25s;
@@ -181,7 +227,7 @@ nav li {
 					animation-delay: 3.25s;
 				}
 
-				nav li:nth-child(5) {
+				nav li:nth-child(9) {
 					-moz-animation-delay: 3.5s;
 					-webkit-animation-delay: 3.5s;
 					-o-animation-delay: 3.5s;
@@ -189,7 +235,7 @@ nav li {
 					animation-delay: 3.5s;
 				}
 
-				nav li:nth-child(6) {
+				nav li:nth-child(10) {
 					-moz-animation-delay: 3.75s;
 					-webkit-animation-delay: 3.75s;
 					-o-animation-delay: 3.75s;
@@ -197,82 +243,56 @@ nav li {
 					animation-delay: 3.75s;
 				}
 
-				nav li:nth-child(7) {
-					-moz-animation-delay: 4s;
-					-webkit-animation-delay: 4s;
-					-o-animation-delay: 4s;
-					-ms-animation-delay: 4s;
-					animation-delay: 4s;
-				}
-
-				nav li:nth-child(8) {
-					-moz-animation-delay: 4.25s;
-					-webkit-animation-delay: 4.25s;
-					-o-animation-delay: 4.25s;
-					-ms-animation-delay: 4.25s;
-					animation-delay: 4.25s;
-				}
-
-				nav li:nth-child(9) {
-					-moz-animation-delay: 4.5s;
-					-webkit-animation-delay: 4.5s;
-					-o-animation-delay: 4.5s;
-					-ms-animation-delay: 4.5s;
-					animation-delay: 4.5s;
-				}
-
-				nav li:nth-child(10) {
-					-moz-animation-delay: 4.75s;
-					-webkit-animation-delay: 4.75s;
-					-o-animation-delay: 4.75s;
-					-ms-animation-delay: 4.75s;
-					animation-delay: 4.75s;
-				}
-
-			nav a {
+			nav a.fa {
 				-webkit-tap-highlight-color: transparent;
 				-webkit-touch-callout: none;
 				border: 0;
-				display: inline-block;
+				
+                color:#ccc;
 			}
 
-				nav a:before {
-					-moz-transition: all 0.2s ease-in-out;
-					-webkit-transition: all 0.2s ease-in-out;
-					-o-transition: all 0.2s ease-in-out;
-					-ms-transition: all 0.2s ease-in-out;
-					transition: all 0.2s ease-in-out;
-					border-radius: 100%;
-					border: solid 1px white;
+
+				nav li a:hover {
+                    color:#666;
+				}
+
+
+				nav a span {
+					display: none;
+				}
+
+
+                nav a:before {
+					-moz-transition: all 0.5s ease-in-out;
+					-webkit-transition: all 0.5s ease-in-out;
+					-o-transition: all 0.5s ease-in-out;
+					-ms-transition: all 0.5s ease-in-out;
+					transition: all 0.5s ease-in-out;
 					display: block;
 					font-size: 1.5em;
-					height: 2.5em;
-					line-height: 2.5em;
+					height: 2em;
+					line-height: 2em;
 					position: relative;
 					text-align: center;
 					top: 0;
-					width: 2.5em;
+					width: 2em;
+                    border-radius: 100%;
+                    border: solid 1px white;
 				}
 
-				nav a:hover {
-					font-size: 1.1em;
+				nav a:hover:before {
+                    color:#666;
+                    border-radius: 100%;
+                    border: solid 1px #666;
 				}
-
-					nav a:hover:before {
-						background-color: rgba(255, 255, 255, 0.75);
-						color: #333;
-					}
 
 				nav a:active {
 					font-size: 0.95em;
 					background: none;
+                    border:0;
 				}
 
-					nav a:active:before {
-						background-color: rgba(255, 255, 255, 0.35);
-						color: #333;
-					}
-
-				nav a span {
-					display: none;
+				nav a:active:before {
+                    color:#666;
+                    border:0;
 				}
