--- a/newsite/css/main.css
+++ b/newsite/css/main.css
@@ -8,11 +8,16 @@
 	@keyframes wrapper { 0% { opacity: 0; } 100% { opacity: 1; } }
 
 	.wrapper {
-		-moz-animation: wrapper 3s forwards;
-		-webkit-animation: wrapper 3s forwards;
-		-o-animation: wrapper 3s forwards;
-		-ms-animation: wrapper 3s forwards;
-		animation: wrapper 3s forwards;
+		-moz-animation: wrapper 4s forwards;
+		-webkit-animation: wrapper 4s forwards;
+		-o-animation: wrapper 4s forwards;
+		-ms-animation: wrapper 4s forwards;
+		animation: wrapper 4s forwards;
+        -moz-animation-delay: 1s;
+	    -webkit-animation-delay: 1s;
+	    -o-animation-delay: 1s;
+	    -ms-animation-delay: 1s;
+		animation-delay: 1s;
 		opacity: 0;
 	}
 
@@ -164,6 +169,46 @@ nav li {
 			}
 
 				nav li:nth-child(1) {
+					-moz-animation-delay: .25s;
+					-webkit-animation-delay: .25s;
+					-o-animation-delay: .25s;
+					-ms-animation-delay: .25s;
+					animation-delay: .25s;
+				}
+
+				nav li:nth-child(2) {
+					-moz-animation-delay: .5s;
+					-webkit-animation-delay: .5s;
+					-o-animation-delay: .5s;
+					-ms-animation-delay: .5s;
+					animation-delay: .5s;
+				}
+
+				nav li:nth-child(3) {
+					-moz-animation-delay: .75s;
+					-webkit-animation-delay: .75s;
+					-o-animation-delay: .75s;
+					-ms-animation-delay: .75s;
+					animation-delay: .75s;
+				}
+
+				nav li:nth-child(4) {
+					-moz-animation-delay: 1s;
+					-webkit-animation-delay: 1s;
+					-o-animation-delay: 1s;
+					-ms-animation-delay: 1s;
+					animation-delay: 1s;
+				}
+
+				nav li:nth-child(5) {
+					-moz-animation-delay: 1.25s;
+					-webkit-animation-delay: 1.25s;
+					-o-animation-delay: 1.25s;
+					-ms-animation-delay: 1.25s;
+					animation-delay: 1.25s;
+				}
+
+				nav li:nth-child(6) {
 					-moz-animation-delay: 1.5s;
 					-webkit-animation-delay: 1.5s;
 					-o-animation-delay: 1.5s;
@@ -171,7 +216,7 @@ nav li {
 					animation-delay: 1.5s;
 				}
 
-				nav li:nth-child(2) {
+				nav li:nth-child(7) {
 					-moz-animation-delay: 1.75s;
 					-webkit-animation-delay: 1.75s;
 					-o-animation-delay: 1.75s;
@@ -179,7 +224,7 @@ nav li {
 					animation-delay: 1.75s;
 				}
 
-				nav li:nth-child(3) {
+				nav li:nth-child(8) {
 					-moz-animation-delay: 2s;
 					-webkit-animation-delay: 2s;
 					-o-animation-delay: 2s;
@@ -187,7 +232,7 @@ nav li {
 					animation-delay: 2s;
 				}
 
-				nav li:nth-child(4) {
+				nav li:nth-child(9) {
 					-moz-animation-delay: 2.25s;
 					-webkit-animation-delay: 2.25s;
 					-o-animation-delay: 2.25s;
@@ -195,52 +240,12 @@ nav li {
 					animation-delay: 2.25s;
 				}
 
-				nav li:nth-child(5) {
+				nav li:nth-child(10) {
 					-moz-animation-delay: 2.5s;
 					-webkit-animation-delay: 2.5s;
 					-o-animation-delay: 2.5s;
 					-ms-animation-delay: 2.5s;
 					animation-delay: 2.5s;
-				}
-
-				nav li:nth-child(6) {
-					-moz-animation-delay: 2.75s;
-					-webkit-animation-delay: 2.75s;
-					-o-animation-delay: 2.75s;
-					-ms-animation-delay: 2.75s;
-					animation-delay: 2.75s;
-				}
-
-				nav li:nth-child(7) {
-					-moz-animation-delay: 3s;
-					-webkit-animation-delay: 3s;
-					-o-animation-delay: 3s;
-					-ms-animation-delay: 3s;
-					animation-delay: 3s;
-				}
-
-				nav li:nth-child(8) {
-					-moz-animation-delay: 3.25s;
-					-webkit-animation-delay: 3.25s;
-					-o-animation-delay: 3.25s;
-					-ms-animation-delay: 3.25s;
-					animation-delay: 3.25s;
-				}
-
-				nav li:nth-child(9) {
-					-moz-animation-delay: 3.5s;
-					-webkit-animation-delay: 3.5s;
-					-o-animation-delay: 3.5s;
-					-ms-animation-delay: 3.5s;
-					animation-delay: 3.5s;
-				}
-
-				nav li:nth-child(10) {
-					-moz-animation-delay: 3.75s;
-					-webkit-animation-delay: 3.75s;
-					-o-animation-delay: 3.75s;
-					-ms-animation-delay: 3.75s;
-					animation-delay: 3.75s;
 				}
 
 			nav a.fa {
