--- a/newsite/main.css
+++ b/newsite/main.css
@@ -58,7 +58,10 @@ ul.papers li {
 #nameplate h1 {
     font-family: serif;
     border: 1px solid white;
-    padding: 3%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    padding-left: 9%;
+    padding-right: 9%;
 }
 
 .header-bg {
